--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 body {
+  background-image: url(./background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -15,14 +19,17 @@ body {
 i.fas {
   font-size: clamp(72px, 15vw, 20vw);
   padding: 30px;
-  color: rgb(71, 71, 190);
+  color: #fff;
 }
 
-.RollDice {
+.flex {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
   justify-content: center;
+}
+
+.RollDice {
   margin-top: calc(30px + 5vw);
 }
 
