--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ i.fas {
   color: #fff;
 }
 
+.ani-dice-wobble {
+  animation: wobble 1s;
+}
+
 .flex {
   display: flex;
   flex-flow: row wrap;
@@ -33,8 +37,21 @@ i.fas {
   margin-top: calc(30px + 5vw);
 }
 
-.RollDice button {
-  break-before: always;
+button {
+  padding: 20px;
+  min-width: 200px;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  background-color: rgb(44, 0, 165);
+  border: 0;
+  outline: none;
+  border-radius: 10px;
+  box-shadow: 1px 1px 20px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+
+button:disabled {
+  opacity: 0.5;
 }
 
 code {
